--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <head>
     <title>
-       <h1> Laxt || Under Construction / Coming Soon Template</h1>
+      Laxt || Under Construction / Coming Soon Template
     </title>
 </head>
 
@@ -20,6 +20,12 @@
             <video autoplay loop>
                 <source src="../laxt/mp4/fundo.mp4" type="video/mp4" />
             </video>
+            <span class="sp2a">
+            </br>
+            </br>
+            </br>
+            </br>
+        </span>
             <div class="blc"></div>
             <nav>
                 <a class="a" href="ABOUT"> ABOUT</a>
@@ -33,6 +39,7 @@
                 <button class="stay">STAY IN THE KNOW</button>
                
             </div>
+      >
         </div>
     </header>
     <main>
@@ -110,7 +117,7 @@
                     GOING LIVE IN
                 </div>
                 <div class="numero">
-                    1640
+                    1633
                 </div>
                 <div class="cabe">
                     DAYS
